...
    <!--Build tabs-->
    <string name="tab_overview">Overview</string>
    <string name="tab_changes">Changes</string>
    <string name="tab_tests">Tests</string>
    <string name="tab_build_log">Build Log</string>
    <string name="tab_artifacts">Artifacts</string>
    <string name="tab_parameters">Parameters</string>
    <string name="tab_snapshot_dependencies">Snapshot dependencies</string>

    <!--progress creating new account dialog-->
    <string name="progress_dialog_content">Please wait…</string>

    <!--create new account dialog-->
...
    <string name="permissions_dialog_title">Permissions warning</string>
    <string name="permissions_dialog_content">In order to download artifact the app requires to have WRITE_EXTERNAL_STORAGE permissions granted.</string>
    <string name="permissions_install_packages_dialog_content">In order to install apk files the app requires to have install unknown apps permissions enabled.</string>
    <string name="permissions_dialog_text_no_permissions">The download artifacts functionality is disabled. Please enable required permissions.</string>

    <!--Build element-->
    <string name="build_element_copy_text">Text copied!</string>

    <!--Create account values-->
    <string name="server_no_such_server">No TeamCity server associated with hostname</string>
    <string name="server_correct_url">Please provide correct server url</string>
    <string name="server_not_secure_http">Using http is insecure and it\'s recommend to use https instead. Use your favorite search engine to get more information about this topic.</string>

...
