...
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/copy"
        android:icon="@mipmap/ic_launcher"
        android:title="@string/build_element_copy" />
</menu>
